# optix-jni

./: .clang-tidy  .cppcheck-suppress  .gitignore  .scalafix.conf  CAUSTICS_PLAN.md  CHANGELOG.md  CLAUDE.md  Dockerfile  ENHANCEMENT_PLAN.md  GPU_BUFFER_REUSE_PLAN.md  MIGRATION_GUIDE.md  OPTIX_WRAPPER_REFACTORING.md  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  RELEASE_CHECKLIST.md  RUNNER_SETUP.md  SHADOW_RAYS_PLAN.md  SHADOW_RAYS_SBT_FIX.md  SHADOW_TESTING_NOTES.md  SHADOW_TEST_COVERAGE.md  SPRINT_5_PLAN.md  SPRINT_6_PLAN.md  SPRINT_7_PLAN.md  TRANSPARENT_SHADOWS_IMPLEMENTATION.md  build.sbt  debug_shader.cu  renovate.json  valgrind.supp
.claude/: CLAUDE.md
.git_hooks/: pre-commit  pre-push
.github/workflows/: ai-review.yml  ci.yml  runner-heartbeat.yml
archive/: README.md  SHADOW_RAYS_PLAN.md  SPRINT_5_PLAN.md  SPRINT_6_PLAN.md  SPRINT_7_PLAN.md
docs/: DEFERRED_PBR_DIFFUSE.md  api-boundary.md  api-review-1.0.md  release-checklist-1.0.md
docs/superpowers/plans/: 2026-07-11-caustics-coverage-net.md  2026-07-12-caustics-mesh-receivers.md  2026-07-12-caustics-rough-refraction.md  2026-07-13-caustics-temporal-denoiser.md
docs/superpowers/specs/: 2026-07-11-production-caustics-design.md
project/: CMakeWithoutVersionBug.scala  plugins.sbt
scripts/: check-coverage-policy.sh  check-doc-completeness.sh  check-version-policy.sh  publish-gpg-public-key.sh  sonatype-central-status.sh
smoke-tests/java/: pom.xml
smoke-tests/kotlin/: build.gradle.kts  gradle.properties  settings.gradle.kts
src/main/native/: BufferManager.cpp  CMakeLists.txt  CausticsRenderer.cpp  DenoiserManager.cpp  JNIBindings.cpp  OptiXApiBindings.cpp  OptiXContext.cpp  OptiXWrapper.cpp  PipelineManager.cpp  RenderConfig.cpp  SceneParameters.cpp  denoise_postprocess.cu  project4d.cu  standalone_test.cpp  stub_no_cuda.cpp
src/main/native/include/: BufferManager.h  CausticsRenderer.h  CudaBuffer.h  DenoisePostprocess.h  DenoiserManager.h  EnvMapCDF.h  ICausticsRenderer.h  MaterialPresets.h  OptiXConstants.h  OptiXContext.h  OptiXData.h  OptiXErrorChecking.h  OptiXFileUtils.h  OptiXWrapper.h  PipelineManager.h  Project4D.h  RenderConfig.h  SceneParameters.h  VectorMath.h
src/main/native/shaders/: caustics_ppm.cu  cylinder.cu  helpers.cu  hit_cone.cu  hit_curve.cu  hit_cylinder.cu  hit_hexadecachoron4d.cu  hit_menger4d.cu  hit_plane.cu  hit_sierpinski4d.cu  hit_sphere.cu  hit_triangle.cu  miss_plane.cu  optix_shaders.cu  raygen_primary.cu  shadows.cu  sphere_closesthit.cu  sphere_combined.cu  sphere_miss.cu  sphere_raygen.cu
src/main/native/tests/: DenoiserManagerTest.cpp  EnvMapCDFTest.cpp  OptiXContextTest.cpp  optix_function_table.cpp
src/main/scala/io/github/lene/optix/: Material.scala  OptiXDenoiser.scala  OptiXMeshApi.scala  OptiXPlaneApi.scala  OptiXRenderApi.scala  OptiXRenderer.scala  OptiXSphereApi.scala  OptiXTextureApi.scala  RenderHealth.scala
src/main/scala/menger/optix/: ErrorHandling.scala  Material.scala  OptiXMeshApi.scala  OptiXPlaneApi.scala  OptiXRenderApi.scala  OptiXRenderer.scala  OptiXSphereApi.scala  OptiXTextureApi.scala  RenderConfig.scala  RenderHealth.scala
src/native/: CMakeLists.txt  OptiXWrapper.cpp
src/native/include/: OptiXWrapper.h
src/native/shaders/: sphere_miss.cu
src/test/resources/: logback-test.xml
src/test/scala/io/github/lene/optix/: AbsorptionSuite.scala  AntialiasingSuite.scala  ArchUnitSpec.scala  AreaLightSuite.scala  BufferReuseSuite.scala  CameraSuite.scala  ColorConstants.scala  ColoredShadowSuite.scala  ConeSuite.scala  CubeSpongeRenderSuite.scala  CurveSuite.scala  CylinderSuite.scala  FilmRenderSuite.scala  GeometrySuite.scala  Hexadecachoron4DRenderSuite.scala  ImageMatchers.scala  ImageUtils.scala  ImageValidation.scala  InstanceAccelerationSuite.scala  MaterialPresetSuite.scala  MaterialSuite.scala  MaterialUnitSuite.scala  Menger4DRenderSuite.scala  MultiInstanceSuite.scala  MultipleLightsSuite.scala  OpaqueSphereSuite.scala  OptiXDenoiserSuite.scala  PerformanceSuite.scala  PlaneMaterialSuite.scala  PlaneSuite.scala  ProceduralTextureSuite.scala  (+22 more)
src/test/scala/menger/optix/: AbsorptionSuite.scala  AbsorptionTest.scala  AntialiasingSuite.scala  AntialiasingTest.scala  AreaLightSuite.scala  BufferReuseSuite.scala  BufferReuseTest.scala  CameraSuite.scala  CameraTest.scala  ColorConstants.scala  ColoredGlassComparison.scala  ColoredShadowSuite.scala  ConeSuite.scala  CubeSpongeRenderSuite.scala  CylinderSuite.scala  FarSphereVisualization.scala  FilmRenderSuite.scala  GeometrySuite.scala  GeometryTest.scala  GreenGlassVisualization.scala  Hexadecachoron4DRenderSuite.scala  ImageMatchers.scala  ImageUtils.scala  ImageValidation.scala  InstanceAccelerationSuite.scala  LibraryLoadTest.scala  LightComparisonVisualization.scala  MaterialPresetSuite.scala  MaterialPresetTest.scala  MaterialSuite.scala  MaterialTest.scala  MaterialUnitSuite.scala  Menger4DRenderSuite.scala  MultiInstanceSuite.scala  MultiInstanceTest.scala  MultipleLightsSuite.scala  MultipleLightsTest.scala  MultipleLightsTestVisualization.scala  OpaqueSphereSuite.scala  OpaqueSphereTest.scala  (+47 more)
src/test/scala/menger/optix/caustics/: CausticsReferenceSpec.scala  CausticsReferenceSuite.scala  CausticsValidationSpec.scala  CausticsValidationSuite.scala  ImageComparison.scala  ReferenceMatchSpec.scala  ReferenceMatchSuite.scala
src/test/scala/menger/optix/geometry/: CubeGeometry.scala
src/test/scala/menger/optix/visualization/: ColoredGlassComparison.scala  FarSphereVisualization.scala  GreenGlassVisualization.scala  LightComparisonVisualization.scala  MultipleLightsTestVisualization.scala
standards/: architecture-paths.txt  architecture-review-guidelines.md  review-guidelines.md
standards/hooks/: check-branch.sh  check-rendering-discipline.sh  check-staged-hygiene.sh  check-test-justification.sh  lib.sh
standards/scripts/: github-pr-review.sh  review.sh
test-resources/caustics-references/: .gitignore  README.md  reference-scene.pbrt  render-references.sh  render_reference.py
test-resources/caustics-references/renders/: canonical-caustics.pbrt
(+21 files in other folders)
